refactor: Refactor to bring in richer support for standalone app
